mdapi_output/objects/POS_Transaction__c.object
<CustomObject>
    <label>POS Transaction</label>
    <nameField>
        <displayFormat>POS-{0000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>